[package]
name = "roll"
version = "0.1.0"
authors = ["gabriele.tasca <gabriele.tasca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_xoshiro = "0.4.0"
term_size = "0.3.1"
rustyline = "6.0.0"
dirs = "2.0.2"
